--- a/geaflow/geaflow-plugins/geaflow-store/geaflow-store-paimon/pom.xml
+++ b/geaflow/geaflow-plugins/geaflow-store/geaflow-store-paimon/pom.xml
@@ -59,5 +59,10 @@
             <version>${paimon.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
